--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "webpack --config ./client/webpack.config.js",
     "dev": "nodemon server & yarn build --watch",
     "test": "jest --watchAll",
-    "postinstall": "yarn build"
+    "postinstall": "yarn build",
+    "knex": "knex"
   },
   "babel": {
     "presets": [
@@ -29,6 +30,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
+    "sqlite3": "^4.0.2",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
   },
