--- a/package.json
+++ b/package.json
@@ -28,7 +28,11 @@
     "knex": "^0.15.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
+    "superagent": "^4.0.0-beta.5",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
   },
