--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
+    "react-select": "^2.0.0",
     "sqlite3": "^4.0.2",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
