--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "sodium": "^2.0.3",
     "sqlite3": "^4.0.2",
     "superagent": "^4.0.0-beta.5",
     "webpack": "^4.19.1",
