--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sodium": "^2.0.3",
     "sqlite3": "^4.0.2",
     "superagent": "^4.0.0-beta.5",
+    "victory": "^30.3.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
   },
