--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jwt-decode": "^2.2.0",
     "knex": "^0.15.2",
     "react": "^16.5.2",
+    "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
@@ -47,7 +48,6 @@
     "sodium": "^2.0.3",
     "sqlite3": "^4.0.2",
     "superagent": "^4.0.0-beta.5",
-    "victory": "^30.3.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
   },
