--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-react": "^6.24.1",
     "bulma": "^0.7.1",
     "dotenv": "^6.0.0",
+    "eslint": "^5.6.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "jest": "^23.6.0",
