accordion tabs done with springload component

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "knex": "^0.15.2",
     "node-sass": "^4.9.3",
     "react": "^16.5.2",
+    "react-accessible-accordion": "^2.4.4",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
