--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build": "webpack --config ./client/webpack.config.js",
     "dev": "nodemon server & yarn build --watch",
     "test": "jest --watchAll",
+    "h:deploy": "git push heroku master",
+    "h:migrate": "heroku run knex migrate:latest",
+    "h:rollback": "heroku run knex migrate:rollback",
+    "h:seed": "heroku run knex seed:run",
     "postinstall": "yarn build && knex migrate:latest",
     "knex": "knex"
   },
