--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jsonwebtoken": "^8.3.0",
     "jwt-decode": "^2.2.0",
     "knex": "^0.15.2",
+    "libsodium-wrappers": "^0.7.3",
     "node-sass": "^4.9.3",
     "pg": "^7.4.3",
     "react": "^16.5.2",
